<resources>
    <!--  Tutorial  -->
    <string name="slide_one_title">Hi!</string>
    <string name="slide_two_title">It\'s all about today</string>
    <string name="slide_three_title">Task sets = Less stress</string>
    <string name="slide_four_title">Go back in time</string>
    <string name="slide_five_title">Let us help you!</string>
    <string name="slide_one_content">Thank you for choosing Hoygenda - Your day-to-day agenda companion!</string>
    <string name="slide_two_content">Hoygenda gives you fresh new board every day. Fill it up with your tasks and journal entries.</string>
    <string name="slide_three_content">- Create a task set\n- Add as many tasks as you want to it\n- Load the set into your Today board </string>
    <string name="slide_four_content">Review all your tasks and journal entries from past days</string>
    <string name="slide_five_content">Get in touch with us for any feature requests or bug fixes.\n You can reach out to us from the main menu :) </string>

    <!--  Delete tasks, completed tasks  -->
    <string name="confirm_deletion">Confirm deletion</string>
    <string name="yes">Yes</string>
    <string name="cancel_confirm_deletion">Cancel</string>
    <string name="do_you_really_want_to_delete_all_completed_tasks">Do you really want to delete all completed tasks?</string>
    <string name="do_you_really_want_to_delete_all_sets">Do you really want to delete all sets?</string>
    <string name="do_you_really_want_to_delete_all_tasks">Do you really want to delete all tasks?</string>
    <string name="do_you_really_want_to_Delte_al_entries">Do you really want to delete all entries?</string>
    <string name="nothing_to_delete">Nothing to delete</string>
    <string name="close">Close</string>
    <string name="you_do_not_have_any_completed_tasks">You don\'t have any completed tasks to delete</string>
    <string name="you_do_not_have_any_sets">You don\'t have any sets to delete</string>
    <string name="you_do_not_have_any_tasks">You don\'t have any tasks to delete</string>
    <string name="you_do_not_have_any_entries">You don\'t have any entries to delete</string>

    <string name="app_name">Hoygenda</string>
    <string name="high_priority_task">high priority task</string>
    <string name="task_title">Enter text…</string>
    <string name="important_task">Important task</string>
    <string name="search">search</string>
    <string name="sort">sort</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_date">sort by date</string>
    <string name="hide_completed">hide completed</string>
    <string name="delete_all_completed">delete all completed</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="sets">Sets</string>
    <string name="you_don_t_have_any_tasks">You don\'t have any tasks</string>
    <string name="you_don_t_have_any_sets">You don\'t have any sets</string>
    <string name="you_don_t_have_any_j_entries">You don\'t have any entries</string>
    <string name="you_don_t_have_any_days">Past days with tasks will show up here</string>
    <string name="no_data">no data</string>
    <string name="add_new_set">add new set</string>
    <string name="set_icon_in_list">Set icon in list</string>
    <string name="delete_all_sets">Delete all sets</string>
    <string name="new_set">New set</string>
    <string name="title">title</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="save_task_to">Save task to…</string>
    <string name="today_add_new_set">new set</string>
    <string name="done">done</string>
    <string name="dummy_view">dummy view</string>
    <string name="add_set">Add set</string>
    <string name="add_task">Add task</string>
    <string name="select_set">Select set</string>
    <string name="delete_all">Delete all</string>
    <string name="journal_entry_icon">journal entry icon</string>
    <string name="important_entry">Important entry</string>
    <string name="tasks_set">Tasks set</string>
    <string name="task">Task</string>
    <string name="journal_entry">Journal entry</string>
    <string name="today">Today</string>
    <string name="my_history">My history</string>
    <string name="tasks_sets">Task sets</string>
    <string name="about">About</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="more">More</string>
    <string name="past_days">Past days</string>
    <string name="drawer_logo">drawer logo</string>
    <string name="get_in_touch">Get in touch</string>
    <string name="leave_a_review">Leave a review</string>
    <string name="changelog">Changelog</string>
    <string name="tutorial">Tutorial</string>
    <string name="tell_your_friends">Tell your friends</string>
    <string name="my_hoygenda">My Hoygenda</string>
    <string name="sort_by_time">Sort by time</string>
    <string name="sort_alphabetically">Sort alphabetically</string>
    <string name="get_in_touch_content">Found a bug and want to report it?\n\nThought of a feature you\'d like us to add?\n\nWe\'d love to hear from you! Send us an email and we will get back to you :)</string>
    <string name="email_us">Email us</string>
    <string name="leave_us_a_review">Leave us a review!</string>
    <string name="you_can_help_recommend_hoygenda_to_others_by_leaving_us_a_5_star_review_we_d_really_appreciate_it">You can help recommend Hoygenda to others by leaving us a 5* review - we\'d really appreciate it!</string>
    <string name="rate_now">Rate now</string>
    <string name="maybe_later">Maybe later</string>
    <string name="don_t_ask_me_again">Don\'t ask me again</string>
    <string name="ok">OK</string>
    <string name="spread_the_love_and_share_hoygenda_with_the_world_n_nwe_appreciate_the_help">Spread the love and share Hoygenda with the world!\n\nWe appreciate the help :)</string>
    <string name="share">share</string>
    <string name="thanks">thanks</string>
    <string name="about_hoygenda">About Hoygenda</string>
    <string name="tutorial_slide_graphic">Tutorial slide graphic</string>
    <string name="previous">Previous</string>
    <string name="next">next</string>
    <string name="finish">finish</string>
    <string name="arrow_back">arrow back</string>
    <string name="arrow_forward">arrow forward</string>
</resources>