<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/todayFragment"
            android:title="@string/today"
            android:icon="@drawable/ic_outline_home_24"/>
        <item
            android:id="@+id/taskSetsListFragment"
            android:title="@string/sets"
            android:icon="@drawable/ic_outline_checklist_24"/>
        <item
            android:id="@+id/daysListFragment"
            android:title="@string/past_days"
            android:icon="@drawable/ic_outline_history_24"/>
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:title="@string/about" />
        </menu>
    </item>
</menu>