<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/tasks_list_menu_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"/>

    <item
        android:icon="@drawable/ic_baseline_sort_24"
        android:title="@string/sort"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction">
        <menu>
            <item
                android:id="@+id/tasks_list_menu_sort_by_name"
                android:title="@string/sort_by_name"/>
            <item
                android:id="@+id/tasks_list_menu_sort_by_date"
                android:title="@string/sort_by_date"/>
        </menu>
    </item>

    <item
        android:id="@+id/tasks_list_menu_hide_completed"
        android:title="@string/hide_completed"
        android:checkable="true"
        app:showAsAction="never"/>

    <item
        android:id="@+id/tasks_list_menu_delete_completed"
        android:title="@string/delete_all_completed"
        app:showAsAction="never"/>
</menu>