<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/hoytask_purple">

    <TextView
        android:id="@+id/tutorial_pager_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/hoytask_white"
        tools:text="@string/slide_one_title" />

    <ImageView
        android:id="@+id/tutorial_pager_image"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/ic_baseline_tag_faces_24"
        android:contentDescription="@string/tutorial_slide_graphic" />

    <TextView
        android:id="@+id/tutorial_pager_content"
        android:textSize="16sp"
        android:padding="12dp"
        tools:text="@string/slide_one_content"
        android:textColor="@color/hoytask_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center" />

</LinearLayout>