<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:padding="12dp"
    tools:context=".ui.more.tellyourfriends.TellYourFriendsDialogFragment">

    <TextView
        android:id="@+id/tell_your_friends_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/tell_your_friends"
        android:textColor="@color/hoytask_black"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tell_your_friends_content_textview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        android:textColor="@color/hoytask_black"
        android:text="@string/spread_the_love_and_share_hoygenda_with_the_world_n_nwe_appreciate_the_help"
        app:layout_constraintTop_toBottomOf="@+id/tell_your_friends_title_textview"
        app:layout_constraintStart_toStartOf="@+id/tell_your_friends_title_textview"/>

    <LinearLayout
        android:id="@+id/tell_your_friends_options_linearlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tell_your_friends_content_textview"
        app:layout_constraintEnd_toEndOf="@+id/tell_your_friends_content_textview"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/tell_your_friends_options_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/hoytask_purple"
            android:background="?android:attr/selectableItemBackground"/>

        <Button
            android:id="@+id/tell_your_friends_options_share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textColor="@color/hoytask_purple"
            android:background="?android:attr/selectableItemBackground"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>