<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    tools:context=".ui.todaytasktoset.SetBottomSheetDialogFragment">

    <TextView
        android:id="@+id/task_today_add_to_set_title_textview"
        android:text="@string/save_task_to"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/task_today_add_to_set_add_set_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="0dp"
        android:background="?android:attr/selectableItemBackground"
        android:drawableLeft="@drawable/ic_baseline_add_24_purple"
        android:text="@string/today_add_new_set"
        android:textAllCaps="true"
        android:textSize="12sp"
        android:textColor="@color/hoytask_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/task_today_add_to_set_title_textview"
        app:layout_constraintBottom_toBottomOf="@+id/task_today_add_to_set_title_textview"
        tools:ignore="RtlHardcoded" />

    <View
        android:id="@+id/task_today_add_to_set_top_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hoytask_light_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_today_add_to_set_title_textview"
        android:layout_marginTop="10dp"/>

    <include
        android:id="@+id/task_today_add_to_set_sets_recyclerview"
        layout="@layout/layout_tasks_list"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_today_add_to_set_top_divider"
        android:layout_marginTop="10dp"/>

    <include
        android:id="@+id/task_today_add_to_set_no_data"
        layout="@layout/layout_no_data_with_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_today_add_to_set_top_divider"
        android:layout_marginTop="10dp"
        android:visibility="invisible" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/task_today_add_to_set_shimmerframelayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:animateLayoutChanges="true"
        android:animationCache="true"
        app:shimmer_repeat_mode="restart"
        app:shimmer_shape="linear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_today_add_to_set_top_divider"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/single_item_shimmer_tasks_set" />
            <include layout="@layout/single_item_shimmer_tasks_set" />
            <include layout="@layout/single_item_shimmer_tasks_set" />
            <include layout="@layout/single_item_shimmer_tasks_set" />
            <include layout="@layout/single_item_shimmer_tasks_set" />
            <include layout="@layout/single_item_shimmer_tasks_set" />
            <include layout="@layout/single_item_shimmer_tasks_set" />

        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <View
        android:id="@+id/task_today_add_to_set_bottom_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hoytask_light_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_today_add_to_set_sets_recyclerview"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/task_today_add_to_set_done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_check_24_purple"
        android:text="@string/done"
        android:textColor="@color/hoytask_purple"
        android:textSize="12sp"
        android:maxHeight="0dp"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/task_today_add_to_set_bottom_divider"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlHardcoded"/>

</androidx.constraintlayout.widget.ConstraintLayout>